--- a/Hawk.ETL.Controls/SmartCrawlerUI.xaml
+++ b/Hawk.ETL.Controls/SmartCrawlerUI.xaml
@@ -102,7 +102,7 @@
             <Label Content="{DynamicResource key_759}" VerticalAlignment="Center" HorizontalAlignment="Left" />
             <TextBox wpfPropertyGrid:TextBoxExtender.CommitOnEnter="True"
                      Text="{Binding URL, Mode=TwoWay, UpdateSourceTrigger=LostFocus}" VerticalAlignment="Center"
-                     Margin="80,0,300,0" ToolTip="{DynamicResource crawler_url_desc}" //>
+                     Margin="80,0,300,0" ToolTip="{DynamicResource crawler_url_desc}" />
             <StackPanel Orientation="Horizontal" Margin="0,0,12.16,0" HorizontalAlignment="Right"
                         d:LayoutOverrides="HorizontalAlignment">
 
@@ -282,8 +282,8 @@
                             <TextBlock Margin="8,42.5,0,0" TextWrapping="Wrap" Text="{DynamicResource key_645}" VerticalAlignment="Top"
                                        HorizontalAlignment="Left" />
                             <CheckBox Margin="8,42.5,80,0" IsChecked="{Binding IsSuperMode}"
-                                      ToolTip="{DynamicResource key_646}" VerticalAlignment="Top"
-                                      Grid.Column="1"  ToolTip="{DynamicResource crawler_super_mode}"}/>
+                                      VerticalAlignment="Top"
+                                      Grid.Column="1"  ToolTip="{DynamicResource crawler_super_mode}"/>
                             <Button DataContext="{Binding Commands[0]}" Content="{Binding Text}" Command="{Binding}"
                                     Height="25" VerticalAlignment="Top" HorizontalAlignment="Left" Width="80"
                                     Margin="8,78,0,0" Grid.Column="1" ToolTip="{DynamicResource crawler_dynamic_sniff}" />
